# ortify

./: .pre-commit-config.yaml  README.md  dod.md  pyproject.toml
.claude/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md  specfirst-propose.md  specfirst-release.md  specfirst-validate.md
.claude/skills/SpecFirst/: ACCEPTANCE_TESTS.md
.claude/skills/SpecFirst/docs/: WorkedExample.md
.claude/skills/SpecFirst/workflows/: ProposeChange.md
.github/workflows/: ruff.yml
openspec/: project.md
openspec/changes/add-ortify-core/: tasks.md
openspec/changes/add-ortify-core/specs/ortify/: spec.md
openspec/changes/archive/2026-01-16-add-ortify-core/: design.md  proposal.md
openspec/specs/ortify/: spec.md
src/ortify/: __init__.py  core.py
tests/: test_ortify.py
